--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="Network.js"></script>
     <script type="text/javascript" src="DefaultNetwork.js"></script>
     <script type="text/javascript" src="DrawArea.js"></script>
+    <script type="text/javascript" src="NetworkLoader.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
