--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <title>Neural Net Visualizer</title>
     <script type="text/javascript" src="jquery-3.4.1.js"></script>
     <script type="text/javascript" src="paper-js/paper-full.js"></script>
-    <script type="text/javascript" src="Network.js"></script>
-    <script type="text/javascript" src="DefaultNetwork.js"></script>
-    <script type="text/javascript" src="DrawArea.js"></script>
-    <script type="text/javascript" src="NetworkLoader.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="module" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
